compiler/tools/fpp-check/test/port_instance/undef_command_recv.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_command_recv.fpp:3.3
  command recv port cmdIn
  ^
error: symbol Fw is not defined
note: looking for a port here
